# rust-randomblog

./: .1.env.enc  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rusty-random-blog-7db92dab73e8.json.enc  app.yaml  secrets.tar.enc  start.sh
migrations/2018-10-01-170558_create_users_and_posts/: up.sql
migrations/2018-10-11-145519_create_users_and_posts/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  view_model.rs
src/simpleauth/: authenticator.rs  config.rs  mod.rs  status.rs  userpass.rs
src/simpleauth/dummy/: mod.rs
static/: style.css
templates/: about_me.html.tera  delete_post.html.tera  edit_post.html.tera  error.html.tera  feed.xml.tera  home.html.tera  layout.html.tera  login.html.tera  main.html.tera  new_post.html.tera  post.html.tera  post_test.html.tera  privilege.html.tera  singin.html.tera
