[package]
name = "rustyrandomblog"
version = "0.1.0"
authors = ["mairandomness <mairakodama@gmail.com>"]

# bin is the entry point for cargo run and build
[[bin]]
name = "main"
path = "src/bin/main.rs"

# Seed bin, to populate de DB
[[bin]]
name = "seed"
path = "src/bin/seed.rs"

# lib the entry point for all main app code
# handles imports, app configuration
[lib]
name = "lil_lib"
path = "src/lib.rs"


[dependencies]
# Server
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", default-features = false, features = ["tera_templates"] }

serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
tera = "0.11.3"

# ORM for the database
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }

# chrono for datetimes
chrono = {version = "0.4.6", features = ["serde"]}

# r2d2 - related to database connection pools
r2d2 = "*"
r2d2-diesel = "*"

fake = "*"

# SYS
dotenv = "0.10.1"

# Hashing
bcrypt = "*"
