[package]
name = "rustyrandomblog"
version = "0.1.1"
authors = ["mairandomness <mairakodama@gmail.com>"]

# bin is the entry point for cargo run and build
[[bin]]
name = "main"
path = "src/bin/main.rs"

# Seed bin, to populate de DB
[[bin]]
name = "seed"
path = "src/bin/seed.rs"

# lib the entry point for all main app code
# handles imports, app configuration
[lib]
name = "lil_lib"
path = "src/lib.rs"


[dependencies]
# Server
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["tera_templates"] }

# for serialization, json, etc
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"

# for templates
tera = "1.8.0"

# for markdown to html parsing :D
comrak = "0.10.0"

# ORM for the database
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }

# chrono for datetimes
chrono = { version = "0.4.19", features = ["serde"] }

# r2d2 - related to database connection pools
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

# SYS
dotenv = "0.15.0"

# Hashing
bcrypt = "0.9.0"

# rss feed
rss = "1.10.0"

# random data generator for the seed
fake = "2.4.0"
